# krunch-pos

./: .dockerignore  .env.example  .gitignore  Makefile  bhojon-menu-reference.md  component-guide.md  cursor-prompt.md  docker-compose.yml  menu-reference.md  package-lock.json  package.json  prd-extracted.txt  prd-tables.txt  prd-text.txt  restaurant_expense_manager_v2.html  tsconfig.base.json  turbo.json  universal-pos-prd-v4.docx  universal-pos-prd-v4.html
apps/admin/: middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/admin/.data/: demo-store.json
apps/admin/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/admin/components/: sidebar.tsx
apps/admin/lib/: api.ts  dailyEntryStore.ts  demoStore.ts  session.ts  utils.ts
apps/api/: .env.example  jest.config.js  package.json  tsconfig.json
apps/api/src/: app.module.ts  generate-openapi.ts  main.ts
apps/ios/: Package.swift
apps/ios/UniversalPOS/: ContentView.swift  (+1 more)
apps/terminal/: .env.example  .env.production.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/terminal-qt/: CMakeLists.txt
apps/terminal-qt/src/: main.cpp
apps/terminal-qt/src/views/: main.qml
apps/terminal-win/: TerminalWin.csproj  app.manifest
deploy/: .env.example  Caddyfile  Dockerfile.api  README.md  docker-api-entrypoint.sh  docker-compose.prod.yml
scripts/: check-node.mjs  configure-minio-cors.sh  deploy-to-vps.sh  init-deploy-env.sh  install-on-vps.sh  open-vps-storage-ports.sh  setup-vps-minio.sh  setup-vps-public-minio.sh  wait-for-postgres.mjs
(+215 files in other folders)
